--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@ layout: default
 
 <div class="home">
 
-  <h1>Hero Spot</h1>
+  <div class="hero text-center">
+      <div class="container">
+          <h1 class="fittext">Lorem ipsum dolor sit ametio.</h1>
+      </div>
+  </div>
 
   
 
