--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
     {% assign pages = site.pages | sort:"weight"  %}
     {% for p in pages %}
         {% if p.title %}
-            <section id="{{p.title}}">
+            <section id="{{p.title | downcase }}">
                 <div class="container">
                     <div class="row">
                         <div class="col-xs-12">
