--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
                 <div class="container">
                     <div class="row">
                         <div class="col-xs-12">
-                            <h2>{{p.title}}</h2>
+                            <h2 class="sr-only">{{p.title}}</h2>
                         </div>
                         {% include lp_{{p.title | downcase }}.html %}
                     </div>
