disqus to production

--- a/_posts/2014-05-27-fa2png.html
+++ b/_posts/2014-05-27-fa2png.html
@@ -3,6 +3,7 @@ layout: post
 title: fa2png.io
 category: programming
 tags: [image-processing, font-awesome, icons]
+comments: true
 ---
 
 <h2>post 5</h2>
