--- a/_posts/2014-08-03-tags-and-categories-on-github-pages.html
+++ b/_posts/2014-08-03-tags-and-categories-on-github-pages.html
@@ -3,6 +3,7 @@ layout: post
 title: How To Use Tags And Categories On GitHub Pages Without Plugins
 category: programming
 tags: [github, github-pages, jekyll]
+comments: true
 ---
 
 <h2>post 6</h2>
