added post excerpt_seperator for blog list page

--- a/_posts/2016-02-05-the-first-post.html
+++ b/_posts/2016-02-05-the-first-post.html
@@ -2,10 +2,11 @@
 layout: post
 category: general
 comments: true
+excerpt_separator: <!--excerpt_separator-->
 ---
 <p>I've needed to get my blog underway for a long time now. There are so many times when I'm blocked and scouring 
     the depths of Stack Overflow for answers when I see other developers seeking the same answers that I do, but 
-    nobody seems to offer any sort of satisfactory conclusion to the problem. And if you're like me, I not only like 
+    nobody seems to offer any sort of satisfactory conclusion to the problem. And if you're like me, <!--excerpt_separator-->I not only like 
     to know the answer, but I need to know what caused the issue in the first place and how that fits into my 
     workflow. So, here I am, blogging away to move our industry forward in the best way I know how.  
 </p>
