fix typos per Ryan

--- a/_posts/2016-02-05-the-first-post.html
+++ b/_posts/2016-02-05-the-first-post.html
@@ -12,8 +12,8 @@ subtitle: What is this all about & how did I get here?
     workflow. So, here I am, blogging away to move our industry forward in the best way I know how.  
 </p>
 
-<p>A far as this site goes, It's obviously combined with my portfolio and personal sales-pitch. I am, after all, a 
-    developer that needs to put grub on my family's table. Aside from that, Now that it's at a usable state, I'm 
+<p>As far as this site goes, It's obviously combined with my portfolio and personal sales-pitch. I am, after all, a
+    developer that needs to put grub on my family's table. Aside from that, now that it's at a usable state, I'm
     going to share how I finish it out. There are some good things coming;
     
     <ul class="strong">
