fix typos per Ryan part 2

--- a/_posts/2016-02-05-the-first-post.html
+++ b/_posts/2016-02-05-the-first-post.html
@@ -29,7 +29,7 @@ subtitle: What is this all about & how did I get here?
     </ul>
 </p>
 
-<p>For now, The next thing I'm working on, is getting some static content filled out, like the sections on the home 
+<p>For now, the next thing I'm working on, is getting some static content filled out, like the sections on the home
     page (services/portfolio/contact), and styling the blog portion of the home page. This site is hosted on github 
     using jekyll, which replaced the sandbox that I WAS using for personal projects etc. I really need to break those
     out into their own github repositories using github pages. I rely on these for my code examples when recruiters 
