add some stuff to blog layout.

--- a/_posts/2016-02-05-the-first-post.html
+++ b/_posts/2016-02-05-the-first-post.html
@@ -4,6 +4,7 @@ category: general
 comments: true
 excerpt_separator: <!--excerpt_separator-->
 subtitle: What is this all about & how did I get here?
+name: post1
 ---
 <p>I've needed to get my blog underway for a long time now. There are so many times when I'm blocked and scouring 
     the depths of Stack Overflow for answers when I see other developers seeking the same answers that I do, but 
