--- a/_notes/sprint_49.html
+++ b/_notes/sprint_49.html
@@ -4,7 +4,7 @@ category: moneygram
 comments: false
 excerpt_separator: <!--excerpt_separator-->
 subtitle: sup?
-name: note11Aug2016
+name: sprint 49
 ---
 
 <div>
@@ -21,7 +21,7 @@ name: note11Aug2016
     </blockquote>
     <ul>
         <li>
-            <h3><a target="_blank" href="https://mgonline.atlassian.net/browse/MGS-1710">MGS-1710</a> - <small class="lead">Unable to Reproduce</small></h3>
+            <h3><a target="_blank" href="https://mgonline.atlassian.net/browse/MGS-1710"><s>MGS-1710</s></a> - <small class="lead">Unable to Reproduce || CLOSED</small></h3>
             <ul>
                 <li>Unable to reproduce locally against Mock Data</li>
                 <li>Unable to reproduce locally against D2 Data</li>
@@ -30,14 +30,21 @@ name: note11Aug2016
             </ul>
         </li>
         <li>
-            <h3><a target="_blank" href="https://mgonline.atlassian.net/browse/MGS-1638">MGS-1638</a></h3>
+            <h3><a target="_blank" href="https://mgonline.atlassian.net/browse/MGS-1638"><s>MGS-1638</s></a> - <small class="lead">Re-assigned to Andy</small></h3>
             <ul>
-                <li>Testing on D2. This error looks legit but I think We return the most common senders first.</li>
+                <li>Working with Andy to get this resolved.</li>
             </ul>
         </li>
         <li>
-            <h3><a target="_blank" href="https://mgonline.atlassian.net/browse/MGS-1670">MGS-1670</a> - <small class="lead">In PR</small></h3>
+            <h3><a target="_blank" href="https://mgonline.atlassian.net/browse/MGS-1670"><s>MGS-1670</s></a> - <small class="lead">In QA</small></h3>
             <p>Fixed issue, we were setting <code>height: 810px</code> on the iFrame in Staging. This was causing the inability to scroll the iframe.</p>
+        </li>
+    </ul>
+    <hr>
+    <p>Made new issue <a target="_blank" href="https://mgonline.atlassian.net/browse/MGS-1762">MGS-1762</a>, and assigned it to myself.</p>
+    <ul>
+        <li>
+            <h3><a target="_blank" href="https://mgonline.atlassian.net/browse/MGS-1762">MGS-1762</a> - <small class="lead">In Development</small></h3>
         </li>
     </ul>
 </div>
