--- a/_notes/sprint_50.html
+++ b/_notes/sprint_50.html
@@ -9,6 +9,14 @@ name: Sprint 50
 
 <div>
 
+    <!-- Target -->
+    <textarea id="bar">Mussum ipsum cacilds...</textarea>
+
+    <!-- Trigger -->
+    <button class="clip" data-clipboard-target="#bar">
+        Cut to clipboard
+    </button>
+
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist">
         <li role="presentation" class="active"><a href="#1504" aria-controls="1504" role="tab" data-toggle="tab">MGS-1504</a></li>
@@ -19,16 +27,16 @@ name: Sprint 50
     <!-- Tab panes -->
     <div class="tab-content">
         <div role="tabpanel" class="tab-pane active" id="1504">
-            <a target="_blank" href="https://mgonline.atlassian.net/browse/MGS-1504"><h2>MGS-1504</h2></a>
+            <a target="_blank" href="https://mgonline.atlassian.net/browse/MGS-1504"><h2>MGS-1504 - [TECHNICAL] Deep Dive w/ Red Team on US Staging Codebase (in anticipation of production release)</h2></a>
             <hr>
             <a class="btn btn-primary" target="_blank" href="https://mgonline.atlassian.net/wiki/pages/viewpage.action?pageId=78840139">Confluence Link</a>
         </div>
         <div role="tabpanel" class="tab-pane" id="1762">
-            <a target="_blank" href="https://mgonline.atlassian.net/browse/MGS-1762"><h2>MGS-1762</h2></a>
+            <a target="_blank" href="https://mgonline.atlassian.net/browse/MGS-1762"><h2>MGS-1762 - Switch screen animation not always going the correct direction</h2></a>
             <hr>
         </div>
         <div role="tabpanel" class="tab-pane" id="1279">
-            <a target="_blank" href="https://mgonline.atlassian.net/browse/MGS-1279"><h2>MGS-1279</h2></a>
+            <a target="_blank" href="https://mgonline.atlassian.net/browse/MGS-1279"><h2>MGS-1279 - US Staging Pay Bills Transaction Info Page</h2></a>
             <hr>
         </div>
     </div>
