refactor dir structure 3

--- a/_mg/sprint_49.html
+++ b/_mg/sprint_49.html
@@ -1,10 +1,7 @@
 ---
-layout: note
-category: moneygram
-comments: false
-excerpt_separator: <!--excerpt_separator-->
-subtitle: sup?
-name: sprint 49
+layout: mg_sprints
+mg: true
+sprint: 49
 ---
 
 <div>
