--- a/_mg/sprint_50.html
+++ b/_mg/sprint_50.html
@@ -1,10 +1,7 @@
 ---
-layout: note
-category: moneygram
-comments: false
-excerpt_separator: <!--excerpt_separator-->
-subtitle: sprint 50
-name: Sprint 50
+layout: mg_sprints
+mg: true
+sprint: 50
 ---
 
 <div>
