remove content blocks

--- a/_mg/sprint_50.html
+++ b/_mg/sprint_50.html
@@ -49,7 +49,10 @@ workitems:
 ---
 
 <!--NOTES PANEL-->
-{% contentfor notes-panel %}
+
+<div class="notes">
+    
+
     <!-- Target -->                                       
     <textarea id="bar">Mussum ipsum cacilds...</textarea> 
                                                           
@@ -57,4 +60,5 @@ workitems:
     <button class="clip" data-clipboard-target="#bar">    
         Cut to clipboard                                  
     </button>
-{% endcontentfor %}
+
+</div>  
